[gd_scene load_steps=26 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/Dood/DoodIdle001.png" type="Texture" id=2]
[ext_resource path="res://player/Dood/DoodIdle002.png" type="Texture" id=3]
[ext_resource path="res://player/Dood/DoodDash001.png" type="Texture" id=4]
[ext_resource path="res://player/Dood/DoodFireballShot001.png" type="Texture" id=5]
[ext_resource path="res://player/Dood/DoodFireballShot002.png" type="Texture" id=6]
[ext_resource path="res://player/Dood/DoodFireballShot003.png" type="Texture" id=7]
[ext_resource path="res://player/Dood/DoodFireballShot004.png" type="Texture" id=8]
[ext_resource path="res://player/Dood/DoodPunch003.png" type="Texture" id=9]
[ext_resource path="res://player/Dood/DoodRun001.png" type="Texture" id=10]
[ext_resource path="res://player/Dood/DoodRun002.png" type="Texture" id=11]
[ext_resource path="res://player/Dood/DoodRun003.png" type="Texture" id=12]
[ext_resource path="res://player/Dood/DoodRun004.png" type="Texture" id=13]
[ext_resource path="res://player/Dood/DoodJump001.png" type="Texture" id=14]
[ext_resource path="res://player/Dood/DoodJump002.png" type="Texture" id=15]
[ext_resource path="res://player/Dood/DoodFall001.png" type="Texture" id=16]
[ext_resource path="res://player/Dood/DoodFall002.png" type="Texture" id=17]
[ext_resource path="res://player/Dood/DoodJumpflip001.png" type="Texture" id=18]
[ext_resource path="res://player/Dood/DoodJumpflip002.png" type="Texture" id=19]
[ext_resource path="res://player/Dood/DoodJumpflip003.png" type="Texture" id=20]
[ext_resource path="res://player/Dood/DoodJumpflip004.png" type="Texture" id=21]
[ext_resource path="res://player/Dood/DoodPunch001.png" type="Texture" id=22]
[ext_resource path="res://player/health/health.tscn" type="PackedScene" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "flip",
"speed": 20.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "fireshot",
"speed": 12.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "jump",
"speed": 8.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "fall",
"speed": 8.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 9 ), ExtResource( 9 ) ],
"loop": true,
"name": "punch2",
"speed": 6.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "run",
"speed": 18.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 22 ), ExtResource( 22 ) ],
"loop": true,
"name": "punch1",
"speed": 6.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ) ],
"loop": true,
"name": "dasher",
"speed": 12.0
}, {
"frames": [ ExtResource( 2 ), null, null, ExtResource( 2 ), null, null ],
"loop": true,
"name": "dead",
"speed": 24.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ) ],
"loop": true,
"name": "dash",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.17297, 7.61052 )

[node name="player" type="KinematicBody2D"]
position = Vector2( 152.203, 68.2834 )
z_index = 1
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.00854492, -0.0104103 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 6.21121, -0.0734558 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -23.8621, -0.949966 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 13.2463, -1.87442 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.95, 0.95 )
limit_left = 0
limit_top = -180
limit_right = 1890
limit_bottom = 180
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.1
drag_margin_right = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ghost_Timer2" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="gravityTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="PunchTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="health" parent="." instance=ExtResource( 23 )]

[node name="dashtimer" type="Timer" parent="."]
wait_time = 0.18
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ghost_Timer2" to="." method="_on_ghost_Timer2_timeout"]
[connection signal="timeout" from="gravityTimer" to="." method="_on_gravityTimer_timeout"]
[connection signal="timeout" from="PunchTimer" to="." method="_on_PunchTimer_timeout"]
[connection signal="timeout" from="dashtimer" to="." method="_on_dashtimer_timeout"]
